Fixed missing scrollbar on list of password banks

--- a/app/styles/areas/_open.scss
+++ b/app/styles/areas/_open.scss
@@ -54,6 +54,8 @@
             flex-direction: column;
             justify-content: flex-start;
             position: relative;
+            max-height: 50vh;
+            overflow-y: auto;
             .open--drag & {
                 display: none;
             }
